parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    BLOCK_COMMENT
    CLASS
    COMPOSED_ASSIGN
    CONST
    CONTINUE
    DECREMENT
    DO
    DOC_COMMENT
    DOT
    DYNAMIC
    ELSE
    EXTENDS
    FINAL
    FOR
    HASH
    IMPLEMENTS
    INCREMENT
    INTEGER_DIVIDE
    INTERFACE
    IS
    IS_NOT
    LINE_COMMENT
    NULL
    NULL_ASSIGN
    OBJECT
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> main_func
Rule 2     main_func -> VOID MAIN LPAREN RPAREN LBRACE statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> var_declaration SEMICOLON
Rule 6     statement -> func_declaration SEMICOLON
Rule 7     statement -> control_structure
Rule 8     basic_statement -> var_declaration SEMICOLON
Rule 9     var_declaration -> var_declaration_num
Rule 10    var_declaration -> var_declaration_string
Rule 11    var_declaration -> var_declaration_bool
Rule 12    var_declaration_num -> type_num VARIABLE ASSIGN num_expression
Rule 13    var_declaration_num -> type_num VARIABLE ASSIGN data_structure
Rule 14    var_declaration_num -> type_num VARIABLE
Rule 15    var_declaration_string -> type_str VARIABLE ASSIGN str_expression
Rule 16    var_declaration_string -> type_str VARIABLE ASSIGN data_structure
Rule 17    var_declaration_string -> type_str VARIABLE
Rule 18    var_declaration_bool -> type_bool VARIABLE ASSIGN bool_expression
Rule 19    var_declaration_bool -> type_bool VARIABLE ASSIGN data_structure
Rule 20    var_declaration_bool -> type_bool VARIABLE
Rule 21    type_num -> DOUBLE
Rule 22    type_num -> INTEGER
Rule 23    type_str -> STRING
Rule 24    type_bool -> BOOL
Rule 25    type -> STRING
Rule 26    type -> LIST
Rule 27    type -> SET
Rule 28    type -> MAP
Rule 29    type -> STACK
Rule 30    type -> QUEUE
Rule 31    type -> TREE
Rule 32    type -> GRAPH
Rule 33    type -> DOUBLE
Rule 34    type -> INTEGER
Rule 35    type -> BOOL
Rule 36    type -> VAR_TYPE
Rule 37    value -> STRING_LITERAL
Rule 38    value -> NUMBER
Rule 39    value -> FLOAT
Rule 40    value -> TRUE
Rule 41    value -> FALSE
Rule 42    num_expression -> num_expression PLUS num_expression
Rule 43    num_expression -> num_expression MINUS num_expression
Rule 44    num_expression -> num_expression TIMES num_expression
Rule 45    num_expression -> num_expression DIVIDE num_expression
Rule 46    num_expression -> num_expression MODULE num_expression
Rule 47    num_expression -> LPAREN num_expression RPAREN
Rule 48    str_expression -> STRING_LITERAL
Rule 49    num_expression -> NUMBER
Rule 50    num_expression -> FLOAT
Rule 51    bool_expression -> bool_expression AND bool_expression
Rule 52    bool_expression -> bool_expression OR bool_expression
Rule 53    bool_expression -> NEGATION bool_expression
Rule 54    bool_expression -> TRUE
Rule 55    bool_expression -> FALSE
Rule 56    data_structure -> list_structure
Rule 57    data_structure -> map_structure
Rule 58    data_structure -> set_structure
Rule 59    list_structure -> LSQUARE elements RSQUARE
Rule 60    map_structure -> LBRACE key_value_pairs RBRACE
Rule 61    set_structure -> LBRACE elements RBRACE
Rule 62    elements -> elements COMMA value
Rule 63    elements -> value
Rule 64    key_value_pairs -> key_value_pairs COMMA key_value
Rule 65    key_value_pairs -> key_value
Rule 66    key_value -> value COLON value
Rule 67    control_structure -> if_structure
Rule 68    control_structure -> switch_structure
Rule 69    if_structure -> IF LPAREN condition RPAREN LBRACE basic_statement RBRACE
Rule 70    switch_structure -> SWITCH LPAREN condition RPAREN LBRACE cases default RBRACE
Rule 71    condition -> num_expression GREATER_THAN num_expression
Rule 72    condition -> num_expression LESS_THAN num_expression
Rule 73    condition -> num_expression GREATER_EQ num_expression
Rule 74    condition -> num_expression LESS_EQ num_expression
Rule 75    condition -> num_expression EQUALS num_expression
Rule 76    condition -> num_expression NOT_EQUALS num_expression
Rule 77    cases -> cases case
Rule 78    cases -> case
Rule 79    case -> CASE NUMBER COLON basic_statement BREAK SEMICOLON
Rule 80    default -> DEFAULT COLON basic_statement SEMICOLON
Rule 81    default -> empty
Rule 82    empty -> <empty>
Rule 83    func_declaration -> func_declaration_num SEMICOLON
Rule 84    func_declaration -> func_declaration_str SEMICOLON
Rule 85    func_declaration -> func_declaration_bool SEMICOLON
Rule 86    func_declaration -> func_declaration_void SEMICOLON
Rule 87    func_declaration_num -> type_num VARIABLE LPAREN params RPAREN LBRACE function_statment_num RBRACE
Rule 88    func_declaration_str -> type_str VARIABLE LPAREN params RPAREN LBRACE function_statment_str RBRACE
Rule 89    func_declaration_bool -> type_bool VARIABLE LPAREN params RPAREN LBRACE function_statment_bool RBRACE
Rule 90    func_declaration_void -> VOID VARIABLE LPAREN params RPAREN LBRACE basic_statement RBRACE
Rule 91    params -> params COMMA type VARIABLE
Rule 92    params -> type VARIABLE
Rule 93    function_statment_num -> return_statment_num
Rule 94    function_statment_num -> basic_statement
Rule 95    function_statment_str -> return_statment_string
Rule 96    function_statment_str -> basic_statement
Rule 97    function_statment_bool -> return_statment_bool
Rule 98    function_statment_bool -> basic_statement
Rule 99    return_statment_num -> RETURN num_expression SEMICOLON
Rule 100   return_statment_string -> RETURN str_expression SEMICOLON
Rule 101   return_statment_bool -> RETURN bool_expression SEMICOLON

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 51
AS                   : 
ASSIGN               : 12 13 15 16 18 19
BLOCK_COMMENT        : 
BOOL                 : 24 35
BREAK                : 79
CASE                 : 79
CLASS                : 
COLON                : 66 79 80
COMMA                : 62 64 91
COMPOSED_ASSIGN      : 
CONST                : 
CONTINUE             : 
DECREMENT            : 
DEFAULT              : 80
DIVIDE               : 45
DO                   : 
DOC_COMMENT          : 
DOT                  : 
DOUBLE               : 21 33
DYNAMIC              : 
ELSE                 : 
EQUALS               : 75
EXTENDS              : 
FALSE                : 41 55
FINAL                : 
FLOAT                : 39 50
FOR                  : 
GRAPH                : 32
GREATER_EQ           : 73
GREATER_THAN         : 71
HASH                 : 
IF                   : 69
IMPLEMENTS           : 
INCREMENT            : 
INTEGER              : 22 34
INTEGER_DIVIDE       : 
INTERFACE            : 
IS                   : 
IS_NOT               : 
LBRACE               : 2 60 61 69 70 87 88 89 90
LESS_EQ              : 74
LESS_THAN            : 72
LINE_COMMENT         : 
LIST                 : 26
LPAREN               : 2 47 69 70 87 88 89 90
LSQUARE              : 59
MAIN                 : 2
MAP                  : 28
MINUS                : 43
MODULE               : 46
NEGATION             : 53
NOT_EQUALS           : 76
NULL                 : 
NULL_ASSIGN          : 
NUMBER               : 38 49 79
OBJECT               : 
OR                   : 52
PLUS                 : 42
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUEUE                : 30
RBRACE               : 60 61 69 70 87 88 89 90
RETURN               : 99 100 101
RPAREN               : 2 47 69 70 87 88 89 90
RSQUARE              : 59
SEMICOLON            : 5 6 8 79 80 83 84 85 86 99 100 101
SET                  : 27
STACK                : 29
STRING               : 23 25
STRING_LITERAL       : 37 48
SWITCH               : 70
TIMES                : 44
TREE                 : 31
TRUE                 : 40 54
VARIABLE             : 12 13 14 15 16 17 18 19 20 87 88 89 90 91 92
VAR_TYPE             : 36
VOID                 : 2 90
WHILE                : 
error                : 

Nonterminals, with rules where they appear

basic_statement      : 69 79 80 90 94 96 98
bool_expression      : 18 51 51 52 52 53 101
case                 : 77 78
cases                : 70 77
condition            : 69 70
control_structure    : 7
data_structure       : 13 16 19
default              : 70
elements             : 59 61 62
empty                : 81
func_declaration     : 6
func_declaration_bool : 85
func_declaration_num : 83
func_declaration_str : 84
func_declaration_void : 86
function_statment_bool : 89
function_statment_num : 87
function_statment_str : 88
if_structure         : 67
key_value            : 64 65
key_value_pairs      : 60 64
list_structure       : 56
main_func            : 1
map_structure        : 57
num_expression       : 12 42 42 43 43 44 44 45 45 46 46 47 71 71 72 72 73 73 74 74 75 75 76 76 99
params               : 87 88 89 90 91
program              : 0
return_statment_bool : 97
return_statment_num  : 93
return_statment_string : 95
set_structure        : 58
statement            : 3 4
statements           : 2 3
str_expression       : 15 100
switch_structure     : 68
type                 : 91 92
type_bool            : 18 19 20 89
type_num             : 12 13 14 87
type_str             : 15 16 17 88
value                : 62 63 66 66
var_declaration      : 5 8
var_declaration_bool : 11
var_declaration_num  : 9
var_declaration_string : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . main_func
    (2) main_func -> . VOID MAIN LPAREN RPAREN LBRACE statements

    VOID            shift and go to state 3

    program                        shift and go to state 1
    main_func                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> main_func .

    $end            reduce using rule 1 (program -> main_func .)


state 3

    (2) main_func -> VOID . MAIN LPAREN RPAREN LBRACE statements

    MAIN            shift and go to state 4


state 4

    (2) main_func -> VOID MAIN . LPAREN RPAREN LBRACE statements

    LPAREN          shift and go to state 5


state 5

    (2) main_func -> VOID MAIN LPAREN . RPAREN LBRACE statements

    RPAREN          shift and go to state 6


state 6

    (2) main_func -> VOID MAIN LPAREN RPAREN . LBRACE statements

    LBRACE          shift and go to state 7


state 7

    (2) main_func -> VOID MAIN LPAREN RPAREN LBRACE . statements
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . var_declaration SEMICOLON
    (6) statement -> . func_declaration SEMICOLON
    (7) statement -> . control_structure
    (9) var_declaration -> . var_declaration_num
    (10) var_declaration -> . var_declaration_string
    (11) var_declaration -> . var_declaration_bool
    (83) func_declaration -> . func_declaration_num SEMICOLON
    (84) func_declaration -> . func_declaration_str SEMICOLON
    (85) func_declaration -> . func_declaration_bool SEMICOLON
    (86) func_declaration -> . func_declaration_void SEMICOLON
    (67) control_structure -> . if_structure
    (68) control_structure -> . switch_structure
    (12) var_declaration_num -> . type_num VARIABLE ASSIGN num_expression
    (13) var_declaration_num -> . type_num VARIABLE ASSIGN data_structure
    (14) var_declaration_num -> . type_num VARIABLE
    (15) var_declaration_string -> . type_str VARIABLE ASSIGN str_expression
    (16) var_declaration_string -> . type_str VARIABLE ASSIGN data_structure
    (17) var_declaration_string -> . type_str VARIABLE
    (18) var_declaration_bool -> . type_bool VARIABLE ASSIGN bool_expression
    (19) var_declaration_bool -> . type_bool VARIABLE ASSIGN data_structure
    (20) var_declaration_bool -> . type_bool VARIABLE
    (87) func_declaration_num -> . type_num VARIABLE LPAREN params RPAREN LBRACE function_statment_num RBRACE
    (88) func_declaration_str -> . type_str VARIABLE LPAREN params RPAREN LBRACE function_statment_str RBRACE
    (89) func_declaration_bool -> . type_bool VARIABLE LPAREN params RPAREN LBRACE function_statment_bool RBRACE
    (90) func_declaration_void -> . VOID VARIABLE LPAREN params RPAREN LBRACE basic_statement RBRACE
    (69) if_structure -> . IF LPAREN condition RPAREN LBRACE basic_statement RBRACE
    (70) switch_structure -> . SWITCH LPAREN condition RPAREN LBRACE cases default RBRACE
    (21) type_num -> . DOUBLE
    (22) type_num -> . INTEGER
    (23) type_str -> . STRING
    (24) type_bool -> . BOOL

    VOID            shift and go to state 8
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    DOUBLE          shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31

    statements                     shift and go to state 9
    statement                      shift and go to state 10
    var_declaration                shift and go to state 11
    func_declaration               shift and go to state 12
    control_structure              shift and go to state 13
    var_declaration_num            shift and go to state 14
    var_declaration_string         shift and go to state 15
    var_declaration_bool           shift and go to state 16
    func_declaration_num           shift and go to state 17
    func_declaration_str           shift and go to state 18
    func_declaration_bool          shift and go to state 19
    func_declaration_void          shift and go to state 20
    if_structure                   shift and go to state 21
    switch_structure               shift and go to state 22
    type_num                       shift and go to state 23
    type_str                       shift and go to state 24
    type_bool                      shift and go to state 25

state 8

    (90) func_declaration_void -> VOID . VARIABLE LPAREN params RPAREN LBRACE basic_statement RBRACE

    VARIABLE        shift and go to state 32


state 9

    (2) main_func -> VOID MAIN LPAREN RPAREN LBRACE statements .
    (3) statements -> statements . statement
    (5) statement -> . var_declaration SEMICOLON
    (6) statement -> . func_declaration SEMICOLON
    (7) statement -> . control_structure
    (9) var_declaration -> . var_declaration_num
    (10) var_declaration -> . var_declaration_string
    (11) var_declaration -> . var_declaration_bool
    (83) func_declaration -> . func_declaration_num SEMICOLON
    (84) func_declaration -> . func_declaration_str SEMICOLON
    (85) func_declaration -> . func_declaration_bool SEMICOLON
    (86) func_declaration -> . func_declaration_void SEMICOLON
    (67) control_structure -> . if_structure
    (68) control_structure -> . switch_structure
    (12) var_declaration_num -> . type_num VARIABLE ASSIGN num_expression
    (13) var_declaration_num -> . type_num VARIABLE ASSIGN data_structure
    (14) var_declaration_num -> . type_num VARIABLE
    (15) var_declaration_string -> . type_str VARIABLE ASSIGN str_expression
    (16) var_declaration_string -> . type_str VARIABLE ASSIGN data_structure
    (17) var_declaration_string -> . type_str VARIABLE
    (18) var_declaration_bool -> . type_bool VARIABLE ASSIGN bool_expression
    (19) var_declaration_bool -> . type_bool VARIABLE ASSIGN data_structure
    (20) var_declaration_bool -> . type_bool VARIABLE
    (87) func_declaration_num -> . type_num VARIABLE LPAREN params RPAREN LBRACE function_statment_num RBRACE
    (88) func_declaration_str -> . type_str VARIABLE LPAREN params RPAREN LBRACE function_statment_str RBRACE
    (89) func_declaration_bool -> . type_bool VARIABLE LPAREN params RPAREN LBRACE function_statment_bool RBRACE
    (90) func_declaration_void -> . VOID VARIABLE LPAREN params RPAREN LBRACE basic_statement RBRACE
    (69) if_structure -> . IF LPAREN condition RPAREN LBRACE basic_statement RBRACE
    (70) switch_structure -> . SWITCH LPAREN condition RPAREN LBRACE cases default RBRACE
    (21) type_num -> . DOUBLE
    (22) type_num -> . INTEGER
    (23) type_str -> . STRING
    (24) type_bool -> . BOOL

    $end            reduce using rule 2 (main_func -> VOID MAIN LPAREN RPAREN LBRACE statements .)
    VOID            shift and go to state 8
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    DOUBLE          shift and go to state 28
    INTEGER         shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 31

    statement                      shift and go to state 33
    var_declaration                shift and go to state 11
    func_declaration               shift and go to state 12
    control_structure              shift and go to state 13
    var_declaration_num            shift and go to state 14
    var_declaration_string         shift and go to state 15
    var_declaration_bool           shift and go to state 16
    func_declaration_num           shift and go to state 17
    func_declaration_str           shift and go to state 18
    func_declaration_bool          shift and go to state 19
    func_declaration_void          shift and go to state 20
    if_structure                   shift and go to state 21
    switch_structure               shift and go to state 22
    type_num                       shift and go to state 23
    type_str                       shift and go to state 24
    type_bool                      shift and go to state 25

state 10

    (4) statements -> statement .

    VOID            reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    SWITCH          reduce using rule 4 (statements -> statement .)
    DOUBLE          reduce using rule 4 (statements -> statement .)
    INTEGER         reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    BOOL            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)


state 11

    (5) statement -> var_declaration . SEMICOLON

    SEMICOLON       shift and go to state 34


state 12

    (6) statement -> func_declaration . SEMICOLON

    SEMICOLON       shift and go to state 35


state 13

    (7) statement -> control_structure .

    VOID            reduce using rule 7 (statement -> control_structure .)
    IF              reduce using rule 7 (statement -> control_structure .)
    SWITCH          reduce using rule 7 (statement -> control_structure .)
    DOUBLE          reduce using rule 7 (statement -> control_structure .)
    INTEGER         reduce using rule 7 (statement -> control_structure .)
    STRING          reduce using rule 7 (statement -> control_structure .)
    BOOL            reduce using rule 7 (statement -> control_structure .)
    $end            reduce using rule 7 (statement -> control_structure .)


state 14

    (9) var_declaration -> var_declaration_num .

    SEMICOLON       reduce using rule 9 (var_declaration -> var_declaration_num .)


state 15

    (10) var_declaration -> var_declaration_string .

    SEMICOLON       reduce using rule 10 (var_declaration -> var_declaration_string .)


state 16

    (11) var_declaration -> var_declaration_bool .

    SEMICOLON       reduce using rule 11 (var_declaration -> var_declaration_bool .)


state 17

    (83) func_declaration -> func_declaration_num . SEMICOLON

    SEMICOLON       shift and go to state 36


state 18

    (84) func_declaration -> func_declaration_str . SEMICOLON

    SEMICOLON       shift and go to state 37


state 19

    (85) func_declaration -> func_declaration_bool . SEMICOLON

    SEMICOLON       shift and go to state 38


state 20

    (86) func_declaration -> func_declaration_void . SEMICOLON

    SEMICOLON       shift and go to state 39


state 21

    (67) control_structure -> if_structure .

    VOID            reduce using rule 67 (control_structure -> if_structure .)
    IF              reduce using rule 67 (control_structure -> if_structure .)
    SWITCH          reduce using rule 67 (control_structure -> if_structure .)
    DOUBLE          reduce using rule 67 (control_structure -> if_structure .)
    INTEGER         reduce using rule 67 (control_structure -> if_structure .)
    STRING          reduce using rule 67 (control_structure -> if_structure .)
    BOOL            reduce using rule 67 (control_structure -> if_structure .)
    $end            reduce using rule 67 (control_structure -> if_structure .)


state 22

    (68) control_structure -> switch_structure .

    VOID            reduce using rule 68 (control_structure -> switch_structure .)
    IF              reduce using rule 68 (control_structure -> switch_structure .)
    SWITCH          reduce using rule 68 (control_structure -> switch_structure .)
    DOUBLE          reduce using rule 68 (control_structure -> switch_structure .)
    INTEGER         reduce using rule 68 (control_structure -> switch_structure .)
    STRING          reduce using rule 68 (control_structure -> switch_structure .)
    BOOL            reduce using rule 68 (control_structure -> switch_structure .)
    $end            reduce using rule 68 (control_structure -> switch_structure .)


state 23

    (12) var_declaration_num -> type_num . VARIABLE ASSIGN num_expression
    (13) var_declaration_num -> type_num . VARIABLE ASSIGN data_structure
    (14) var_declaration_num -> type_num . VARIABLE
    (87) func_declaration_num -> type_num . VARIABLE LPAREN params RPAREN LBRACE function_statment_num RBRACE

    VARIABLE        shift and go to state 40


state 24

    (15) var_declaration_string -> type_str . VARIABLE ASSIGN str_expression
    (16) var_declaration_string -> type_str . VARIABLE ASSIGN data_structure
    (17) var_declaration_string -> type_str . VARIABLE
    (88) func_declaration_str -> type_str . VARIABLE LPAREN params RPAREN LBRACE function_statment_str RBRACE

    VARIABLE        shift and go to state 41


state 25

    (18) var_declaration_bool -> type_bool . VARIABLE ASSIGN bool_expression
    (19) var_declaration_bool -> type_bool . VARIABLE ASSIGN data_structure
    (20) var_declaration_bool -> type_bool . VARIABLE
    (89) func_declaration_bool -> type_bool . VARIABLE LPAREN params RPAREN LBRACE function_statment_bool RBRACE

    VARIABLE        shift and go to state 42


state 26

    (69) if_structure -> IF . LPAREN condition RPAREN LBRACE basic_statement RBRACE

    LPAREN          shift and go to state 43


state 27

    (70) switch_structure -> SWITCH . LPAREN condition RPAREN LBRACE cases default RBRACE

    LPAREN          shift and go to state 44


state 28

    (21) type_num -> DOUBLE .

    VARIABLE        reduce using rule 21 (type_num -> DOUBLE .)


state 29

    (22) type_num -> INTEGER .

    VARIABLE        reduce using rule 22 (type_num -> INTEGER .)


state 30

    (23) type_str -> STRING .

    VARIABLE        reduce using rule 23 (type_str -> STRING .)


state 31

    (24) type_bool -> BOOL .

    VARIABLE        reduce using rule 24 (type_bool -> BOOL .)


state 32

    (90) func_declaration_void -> VOID VARIABLE . LPAREN params RPAREN LBRACE basic_statement RBRACE

    LPAREN          shift and go to state 45


state 33

    (3) statements -> statements statement .

    VOID            reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    SWITCH          reduce using rule 3 (statements -> statements statement .)
    DOUBLE          reduce using rule 3 (statements -> statements statement .)
    INTEGER         reduce using rule 3 (statements -> statements statement .)
    STRING          reduce using rule 3 (statements -> statements statement .)
    BOOL            reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 34

    (5) statement -> var_declaration SEMICOLON .

    VOID            reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    IF              reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    SWITCH          reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    DOUBLE          reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    INTEGER         reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    STRING          reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    BOOL            reduce using rule 5 (statement -> var_declaration SEMICOLON .)
    $end            reduce using rule 5 (statement -> var_declaration SEMICOLON .)


state 35

    (6) statement -> func_declaration SEMICOLON .

    VOID            reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    IF              reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    SWITCH          reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    DOUBLE          reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    INTEGER         reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    STRING          reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    BOOL            reduce using rule 6 (statement -> func_declaration SEMICOLON .)
    $end            reduce using rule 6 (statement -> func_declaration SEMICOLON .)


state 36

    (83) func_declaration -> func_declaration_num SEMICOLON .

    SEMICOLON       reduce using rule 83 (func_declaration -> func_declaration_num SEMICOLON .)


state 37

    (84) func_declaration -> func_declaration_str SEMICOLON .

    SEMICOLON       reduce using rule 84 (func_declaration -> func_declaration_str SEMICOLON .)


state 38

    (85) func_declaration -> func_declaration_bool SEMICOLON .

    SEMICOLON       reduce using rule 85 (func_declaration -> func_declaration_bool SEMICOLON .)


state 39

    (86) func_declaration -> func_declaration_void SEMICOLON .

    SEMICOLON       reduce using rule 86 (func_declaration -> func_declaration_void SEMICOLON .)


state 40

    (12) var_declaration_num -> type_num VARIABLE . ASSIGN num_expression
    (13) var_declaration_num -> type_num VARIABLE . ASSIGN data_structure
    (14) var_declaration_num -> type_num VARIABLE .
    (87) func_declaration_num -> type_num VARIABLE . LPAREN params RPAREN LBRACE function_statment_num RBRACE

    ASSIGN          shift and go to state 46
    SEMICOLON       reduce using rule 14 (var_declaration_num -> type_num VARIABLE .)
    LPAREN          shift and go to state 47


state 41

    (15) var_declaration_string -> type_str VARIABLE . ASSIGN str_expression
    (16) var_declaration_string -> type_str VARIABLE . ASSIGN data_structure
    (17) var_declaration_string -> type_str VARIABLE .
    (88) func_declaration_str -> type_str VARIABLE . LPAREN params RPAREN LBRACE function_statment_str RBRACE

    ASSIGN          shift and go to state 48
    SEMICOLON       reduce using rule 17 (var_declaration_string -> type_str VARIABLE .)
    LPAREN          shift and go to state 49


state 42

    (18) var_declaration_bool -> type_bool VARIABLE . ASSIGN bool_expression
    (19) var_declaration_bool -> type_bool VARIABLE . ASSIGN data_structure
    (20) var_declaration_bool -> type_bool VARIABLE .
    (89) func_declaration_bool -> type_bool VARIABLE . LPAREN params RPAREN LBRACE function_statment_bool RBRACE

    ASSIGN          shift and go to state 50
    SEMICOLON       reduce using rule 20 (var_declaration_bool -> type_bool VARIABLE .)
    LPAREN          shift and go to state 51


state 43

    (69) if_structure -> IF LPAREN . condition RPAREN LBRACE basic_statement RBRACE
    (71) condition -> . num_expression GREATER_THAN num_expression
    (72) condition -> . num_expression LESS_THAN num_expression
    (73) condition -> . num_expression GREATER_EQ num_expression
    (74) condition -> . num_expression LESS_EQ num_expression
    (75) condition -> . num_expression EQUALS num_expression
    (76) condition -> . num_expression NOT_EQUALS num_expression
    (42) num_expression -> . num_expression PLUS num_expression
    (43) num_expression -> . num_expression MINUS num_expression
    (44) num_expression -> . num_expression TIMES num_expression
    (45) num_expression -> . num_expression DIVIDE num_expression
    (46) num_expression -> . num_expression MODULE num_expression
    (47) num_expression -> . LPAREN num_expression RPAREN
    (49) num_expression -> . NUMBER
    (50) num_expression -> . FLOAT

    LPAREN          shift and go to state 52
    NUMBER          shift and go to state 55
    FLOAT           shift and go to state 56

    condition                      shift and go to state 53
    num_expression                 shift and go to state 54

state 44

    (70) switch_structure -> SWITCH LPAREN . condition RPAREN LBRACE cases default RBRACE
    (71) condition -> . num_expression GREATER_THAN num_expression
    (72) condition -> . num_expression LESS_THAN num_expression
    (73) condition -> . num_expression GREATER_EQ num_expression
    (74) condition -> . num_expression LESS_EQ num_expression
    (75) condition -> . num_expression EQUALS num_expression
    (76) condition -> . num_expression NOT_EQUALS num_expression
    (42) num_expression -> . num_expression PLUS num_expression
    (43) num_expression -> . num_expression MINUS num_expression
    (44) num_expression -> . num_expression TIMES num_expression
    (45) num_expression -> . num_expression DIVIDE num_expression
    (46) num_expression -> . num_expression MODULE num_expression
    (47) num_expression -> . LPAREN num_expression RPAREN
    (49) num_expression -> . NUMBER
    (50) num_expression -> . FLOAT

    LPAREN          shift and go to state 52
    NUMBER          shift and go to state 55
    FLOAT           shift and go to state 56

    condition                      shift and go to state 57
    num_expression                 shift and go to state 54

state 45

    (90) func_declaration_void -> VOID VARIABLE LPAREN . params RPAREN LBRACE basic_statement RBRACE
    (91) params -> . params COMMA type VARIABLE
    (92) params -> . type VARIABLE
    (25) type -> . STRING
    (26) type -> . LIST
    (27) type -> . SET
    (28) type -> . MAP
    (29) type -> . STACK
    (30) type -> . QUEUE
    (31) type -> . TREE
    (32) type -> . GRAPH
    (33) type -> . DOUBLE
    (34) type -> . INTEGER
    (35) type -> . BOOL
    (36) type -> . VAR_TYPE

    STRING          shift and go to state 60
    LIST            shift and go to state 61
    SET             shift and go to state 62
    MAP             shift and go to state 63
    STACK           shift and go to state 64
    QUEUE           shift and go to state 65
    TREE            shift and go to state 66
    GRAPH           shift and go to state 67
    DOUBLE          shift and go to state 68
    INTEGER         shift and go to state 69
    BOOL            shift and go to state 70
    VAR_TYPE        shift and go to state 71

    params                         shift and go to state 58
    type                           shift and go to state 59

state 46

    (12) var_declaration_num -> type_num VARIABLE ASSIGN . num_expression
    (13) var_declaration_num -> type_num VARIABLE ASSIGN . data_structure
    (42) num_expression -> . num_expression PLUS num_expression
    (43) num_expression -> . num_expression MINUS num_expression
    (44) num_expression -> . num_expression TIMES num_expression
    (45) num_expression -> . num_expression DIVIDE num_expression
    (46) num_expression -> . num_expression MODULE num_expression
    (47) num_expression -> . LPAREN num_expression RPAREN
    (49) num_expression -> . NUMBER
    (50) num_expression -> . FLOAT
    (56) data_structure -> . list_structure
    (57) data_structure -> . map_structure
    (58) data_structure -> . set_structure
    (59) list_structure -> . LSQUARE elements RSQUARE
    (60) map_structure -> . LBRACE key_value_pairs RBRACE
    (61) set_structure -> . LBRACE elements RBRACE

    LPAREN          shift and go to state 52
    NUMBER          shift and go to state 55
    FLOAT           shift and go to state 56
    LSQUARE         shift and go to state 77
    LBRACE          shift and go to state 78

    num_expression                 shift and go to state 72
    data_structure                 shift and go to state 73
    list_structure                 shift and go to state 74
    map_structure                  shift and go to state 75
    set_structure                  shift and go to state 76

state 47

    (87) func_declaration_num -> type_num VARIABLE LPAREN . params RPAREN LBRACE function_statment_num RBRACE
    (91) params -> . params COMMA type VARIABLE
    (92) params -> . type VARIABLE
    (25) type -> . STRING
    (26) type -> . LIST
    (27) type -> . SET
    (28) type -> . MAP
    (29) type -> . STACK
    (30) type -> . QUEUE
    (31) type -> . TREE
    (32) type -> . GRAPH
    (33) type -> . DOUBLE
    (34) type -> . INTEGER
    (35) type -> . BOOL
    (36) type -> . VAR_TYPE

    STRING          shift and go to state 60
    LIST            shift and go to state 61
    SET             shift and go to state 62
    MAP             shift and go to state 63
    STACK           shift and go to state 64
    QUEUE           shift and go to state 65
    TREE            shift and go to state 66
    GRAPH           shift and go to state 67
    DOUBLE          shift and go to state 68
    INTEGER         shift and go to state 69
    BOOL            shift and go to state 70
    VAR_TYPE        shift and go to state 71

    params                         shift and go to state 79
    type                           shift and go to state 59

state 48

    (15) var_declaration_string -> type_str VARIABLE ASSIGN . str_expression
    (16) var_declaration_string -> type_str VARIABLE ASSIGN . data_structure
    (48) str_expression -> . STRING_LITERAL
    (56) data_structure -> . list_structure
    (57) data_structure -> . map_structure
    (58) data_structure -> . set_structure
    (59) list_structure -> . LSQUARE elements RSQUARE
    (60) map_structure -> . LBRACE key_value_pairs RBRACE
    (61) set_structure -> . LBRACE elements RBRACE

    STRING_LITERAL  shift and go to state 82
    LSQUARE         shift and go to state 77
    LBRACE          shift and go to state 78

    str_expression                 shift and go to state 80
    data_structure                 shift and go to state 81
    list_structure                 shift and go to state 74
    map_structure                  shift and go to state 75
    set_structure                  shift and go to state 76

state 49

    (88) func_declaration_str -> type_str VARIABLE LPAREN . params RPAREN LBRACE function_statment_str RBRACE
    (91) params -> . params COMMA type VARIABLE
    (92) params -> . type VARIABLE
    (25) type -> . STRING
    (26) type -> . LIST
    (27) type -> . SET
    (28) type -> . MAP
    (29) type -> . STACK
    (30) type -> . QUEUE
    (31) type -> . TREE
    (32) type -> . GRAPH
    (33) type -> . DOUBLE
    (34) type -> . INTEGER
    (35) type -> . BOOL
    (36) type -> . VAR_TYPE

    STRING          shift and go to state 60
    LIST            shift and go to state 61
    SET             shift and go to state 62
    MAP             shift and go to state 63
    STACK           shift and go to state 64
    QUEUE           shift and go to state 65
    TREE            shift and go to state 66
    GRAPH           shift and go to state 67
    DOUBLE          shift and go to state 68
    INTEGER         shift and go to state 69
    BOOL            shift and go to state 70
    VAR_TYPE        shift and go to state 71
